--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
 	"description": "Find semver versions in a string: `unicorn v1.2.3` → `1.2.3`",
 	"license": "MIT",
 	"repository": "sindresorhus/find-versions-cli",
+	"funding": "https://github.com/sponsors/sindresorhus",
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
-		"url": "sindresorhus.com"
+		"url": "https://sindresorhus.com"
 	},
+	"type": "module",
 	"bin": {
 		"find-versions": "cli.js"
 	},
 	"engines": {
-		"node": ">=8"
+		"node": ">=12"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -29,7 +31,6 @@
 		"versions",
 		"regex",
 		"regexp",
-		"re",
 		"match",
 		"matching",
 		"semantic",
@@ -38,12 +39,12 @@
 		"get"
 	],
 	"dependencies": {
-		"find-versions": "^3.0.0",
-		"meow": "^5.0.0"
+		"find-versions": "^5.0.0",
+		"meow": "^9.0.0"
 	},
 	"devDependencies": {
-		"ava": "^0.25.0",
-		"execa": "^1.0.0",
-		"xo": "^0.23.0"
+		"ava": "^3.15.0",
+		"execa": "^5.0.0",
+		"xo": "^0.39.1"
 	}
 }
